# func-hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml  publish.yml
demo-tools/: registry.json
demo-tools/nestjs-tool/: funchub-tool.yaml  funchub.json  hello-tool.mjs
demo-tools/python-tool/: funchub-tool.yaml  hello_tool.py
nestjs/: README.md  jest.config.ts  package-lock.json  package.json
nestjs/src/: cli.ts  client.ts  decorators.ts  exceptions.ts  github.client.ts  index.ts  loader.ts  models.ts  version.parser.ts
nestjs/tests/: cache.spec.ts  client.spec.ts  exceptions.spec.ts  github.client.spec.ts  install.spec.ts  loader.spec.ts  version.parser.spec.ts  windows.paths.spec.ts
promo/: hn-launch.txt  reddit-launch.txt  twitter-thread.txt  v2ex-launch.txt
python/: README.md  pyproject.toml
python/funchub/: __init__.py  cli.py  client.py  decorators.py  exceptions.py  github_client.py  loader.py  models.py  version_parser.py
python/tests/: conftest.py  test_cache.py  test_cli.py  test_decorator.py  test_exceptions.py  test_github_client.py  test_install.py  test_loader.py  test_version_parser.py  test_windows_paths.py
registry-web/: app.js  index.html  style.css
