[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funchub"
version = "0.1.0"
description = "FuncHub - A tool registry and dynamic loader for AI agents"
authors = [{ name = "FuncHub Team" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "packaging>=23.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
funchub = "funchub.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["funchub"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
